# wasm-fantasia

./: .gitignore  CLAUDE.md  Cargo.toml  Cargo.toml.template  DUAL_PLATFORM_PLAN.md  Justfile  NOTES.md  README.md  REFACTOR.md  Trunk.toml  VAT-WIP.md  index.html  package-lock.json  package.json  rustc-ice-2025-10-05T14_49_29-431096.txt  rustc-ice-2025-10-06T00_03_49-508967.txt  rustc-ice-2025-10-06T00_04_42-509319.txt  tts.py
.cargo/: config.toml
.github/workflows/: release.yaml  release.yaml.template
assets/: config.ron  credits.ron  settings.ron
assets/models/: scene.glb
assets/noise/: noise_textures_64_128.ron
assets/shaders/: random.glsl
client/: Cargo.toml  build.rs  web_size.py
client/assets/: config.ron  settings.ron
client/assets/presets/: crit.preset.ron  stacking.preset.ron
client/assets/shaders/: scanlines.wgsl
client/src/: main.rs  venom_voice.rs
client/src/asset_loading/: mod.rs  ron.rs  tracking.rs
client/src/audio/: fade.rs
client/src/camera/: assist.rs  juice.rs  mod.rs  third_person.rs
client/src/combat/: attack.rs  components.rs  damage.rs  enemy.rs  events.rs  feedback.rs  floaters.rs  hit_feedback.rs  mod.rs  separation.rs  sound.rs  targeting.rs  vfx.rs
client/src/game/: combat_debug.rs  mod.rs  music.rs
client/src/models/: event_dispatch.rs  ext_traits.rs  input.rs  keybinding.rs  player.rs  pre_load.rs  primitives.rs  settings.rs  states.rs
client/src/networking/: combat.rs  connection.rs  diagnostics.rs  local_server.rs  mod.rs  player.rs  reconcile.rs  sync.rs
client/src/player/: animation.rs  control.rs  mod.rs  sound.rs
client/src/postfx/: mod.rs
client/src/rule_presets/: crit.rs  feedback.rs  mod.rs  stacking.rs
client/src/rules/: mod.rs  triggers.rs
client/src/scene/: mod.rs
client/src/screens/: connecting.rs  gameplay.rs  loading.rs  mod.rs  settings.rs  title.rs
client/src/ui/: constants.rs  hud.rs  mod.rs  modal.rs  performance.rs  props.rs  server_status.rs  widget.rs
client/src/ui/prefabs/: mod.rs  modals.rs  settings.rs
crates/avian/crates/avian3d/: Cargo.toml
crates/avian/crates/avian3d/examples/: bvh.rs  custom_broad_phase.rs  joint_motors_3d.rs  move_and_slide_3d.rs
crates/avian/crates/bevy_avian3d/: Cargo.toml
crates/avian/crates/bevy_avian3d/src/: lib.rs
crates/avian/src/: ancestor_marker.rs  entity_handle.rs  interpolation.rs  lib.rs  standalone.rs  utils.rs
crates/avian/src/character_controller/: mod.rs  move_and_slide.rs
crates/avian/src/collider_tree/: diagnostics.rs  mod.rs  obvhs_ext.rs  optimization.rs  proxy_key.rs  traverse.rs  tree.rs  update.rs
crates/avian/src/collision/: collision_events.rs  diagnostics.rs  hooks.rs  mod.rs
crates/avian/src/data_structures/: bit_vec.rs  id_pool.rs  mod.rs  pair_key.rs  sparse_secondary_map.rs  stable_vec.rs
crates/avian/src/debug_render/: configuration.rs  gizmos.rs  mod.rs
crates/avian/src/diagnostics/: entity_counters.rs  mod.rs  total.rs  ui.rs
crates/avian/src/dynamics/: mod.rs
crates/avian/src/math/: bevy_math_compat.rs  double.rs  mod.rs  single.rs
crates/avian/src/physics_transform/: helper.rs  mod.rs  tests.rs  transform.rs
crates/avian/src/picking/: mod.rs
crates/avian/src/schedule/: mod.rs  time.rs
crates/avian/src/spatial_query/: diagnostics.rs  mod.rs  query_filter.rs  ray_caster.rs  shape_caster.rs  system_param.rs
crates/bevy-tnua-avian3d/: Cargo.toml
crates/bevy-tnua-avian3d/src/: lib.rs
crates/bevy_third_person_camera/: Cargo.toml
crates/bevy_third_person_camera/src/: lib.rs  mouse.rs
crates/firewheel-web-audio/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
crates/firewheel-web-audio/.github/workflows/: checks.yaml
crates/firewheel-web-audio/src/: auto_resume.rs  backend.rs  dynamic_module.rs  error.rs  instant.rs  lib.rs  wasm_processor.rs
crates/firewheel-web-audio/src/js/: audio-worklet.js
crates/spacetimedb-sdk/: .cargo_vcs_info.json  Cargo.toml
crates/spacetimedb-sdk/src/: callbacks.rs  client_cache.rs  compression.rs  credentials.rs  db_connection.rs  error.rs  event.rs  lib.rs  spacetime_module.rs  subscription.rs  wasm_safe.rs  websocket.rs
crates/tokio-tungstenite-wasm/: .cargo_vcs_info.json  Cargo.toml
crates/tokio-tungstenite-wasm/src/: web.rs
docs/: ANIMATED_ENEMIES.md  BEVY_018_UPGRADE.md  DECISIONS.md  DESIGN.md  DESIGN_CONCEPTS.md  PROCEDURAL_POWERS.md
docs/architecture/: PATTERNS.md  REFACTOR_PLAN.md  VISION.md
docs/implementation/: COMBAT_SERVICE.md  MOVEMENT.md  NETWORKING_ARCHITECTURE.md  RULES_SYSTEM.md
scripts/: build-web-model.mjs  remap_slide_animations.py
server/: Cargo.toml
server/.cargo/: config.toml
server/src/: combat.rs  enemy_ai.rs  lib.rs  lifecycle.rs  schema.rs
shared/: Cargo.toml
shared/src/: combat.rs  lib.rs  rng.rs  rules.rs
shared/src/presets/: crit.rs  feedback.rs  mod.rs  stacking.rs
src/: audio.rs  main.rs
src/asset_loading/: mod.rs  tracking.rs
src/audio/: fade.rs  fdsp_host.rs  mod.rs  radio.rs
src/camera/: assist.rs  mod.rs  third_person.rs  top_down.rs
src/combat/: attack.rs  components.rs  damage.rs  enemy.rs  hit_feedback.rs  mod.rs  separation.rs  sound.rs  systems.rs  targeting.rs
src/game/: dev_tools.rs  mod.rs  mood.rs  music.rs
src/game/camera/: mod.rs  third_person.rs
src/models/: event_dispatch.rs  ext_traits.rs  input.rs  mod.rs  player.rs  pre_load.rs  primitives.rs  settings.rs  states.rs
src/networking/: combat.rs  mod.rs  player.rs
src/player/: animation.rs  control.rs  mod.rs  sound.rs
src/postfx/: mod.rs
src/rule_presets/: crit.rs  feedback.rs  mod.rs  stacking.rs
src/rules/: mod.rs  preset.rs  triggers.rs
src/scene/: mod.rs  shader_material.rs  skybox.rs
src/screens/: credits.rs  gameplay.rs  loading.rs  mod.rs  splash.rs  title.rs
src/ui/: constants.rs  interaction.rs  mod.rs  modal.rs  perf.rs  props.rs  widget.rs
src/ui/prefabs/: keybind_editor.rs  mod.rs  modals.rs  settings.rs
src/ui/widgets/: alpha_pattern.rs  constants.rs  cursor.rs  font_styles.rs  handle_or_path.rs  mod.rs  palette.rs  props.rs  rounded_corners.rs  theme.rs  tokens.rs
(+78 files in other folders)
