[workspace]
members = ["shared", "client", "server", "crates/spacetimedb-sdk"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
glam = "0.30"

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
collapsible_if = "allow"
nonstandard_macro_braces = "warn"

[patch.crates-io]
firewheel-web-audio = { git = "https://github.com/CorvusPrudens/firewheel-web-audio", rev = "ad810af" }
tokio-tungstenite-wasm = { path = "crates/tokio-tungstenite-wasm" }
bevy_third_person_camera = { git = "https://github.com/olekspickle/bevy_third_person_camera", branch = "main" }

[profile.dev]
opt-level = 1
debug = 0
[profile.dev.package."*"]
opt-level = 3
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4
[profile.ci.package."*"]
opt-level = 0

[profile.release]
lto = "thin"
opt-level = "s"
codegen-units = 1
strip = true
