[workspace]
members = ["shared", "client", "server", "crates/spacetimedb-sdk"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
glam = "0.30"

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
collapsible_if = "allow"
nonstandard_macro_braces = "warn"

[patch.crates-io]
firewheel-web-audio = { path = "crates/firewheel-web-audio" }
tokio-tungstenite-wasm = { path = "crates/tokio-tungstenite-wasm" }
bevy_third_person_camera = { path = "crates/bevy_third_person_camera" }
bevy-tnua-avian3d = { path = "crates/bevy-tnua-avian3d" }

[profile.dev]
opt-level = 1
debug = 0
[profile.dev.package."*"]
opt-level = 3
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4
[profile.ci.package."*"]
opt-level = 0

[profile.release]
lto = "thin"
opt-level = "s"
codegen-units = 1
strip = true
