[package]
name = "wasm_fantasia"
edition = "2024"
version = "0.1.5"
authors = ["Oleks Pickle <22867443+olekspickle@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
exclude = ["assets"]
repository = "https://github.com/olekspickle/wasm_fantasia"
description = "Simple but comprehensive 3D RPG game template with gamepad support"
keywords = ["bevy", "game", "template", "devkit", "third person", "topdown", "gamedev"]

[features]
default = ["dev_native", "third_person"]
web = ["bevy/webgpu", "third_person", "audio", "multiplayer"]
custom_cursor  = []
third_person = ["bevy_third_person_camera"]
audio = ["bevy_seedling", "bevy_shuffle_bag", "firewheel"]
dev = [
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    "bevy/dynamic_linking",         # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/track_location",          # Improve error messages coming from Bevy
]
dev_native = [
    "dev",
    "enhanced",
    "audio",                        # Audio enabled for native builds
    "multiplayer",                  # Multiplayer enabled for native builds
    "custom_cursor",
    "bevy-inspector-egui",
    "bevy_hanabi",                  # GPU particle effects (native only)
    "bevy/embedded_watcher",        # Enable embedded asset hot reloading for native dev builds.
    "bevy/file_watcher",            # Enable asset hot reloading for native dev builds.
]
multiplayer = ["spacetimedb-sdk"]
enhanced = [
    "bevy/meshlet",                 # new nanite-like rendering system
    "bevy/bevy_pbr",                # PBR
    "bevy/pbr_specular_textures",   # PBR specular maps
]

[dependencies.bevy]
version = "^0.17"
default-features = false
# opinionated list without bevy_audio
features = [
    # TODO: use shorter list on 0.18
    # "default_app",
    # "default_platform",
    # "3d_api",
    # "3d_bevy_render",
    # "ui",
    # "scene",
    # "picking",
    # DELETE after 0.18 >
    "std",
    "zstd_rust",
    "sysinfo_plugin",
    "multi_threaded",
    "smaa_luts",
    "bevy_core_pipeline",
    "bevy_anti_alias",
    "bevy_render",
    "bevy_color",
    "reflect_auto_register",
    "tonemapping_luts",
    "bevy_post_process",
    "bevy_winit",
    "bevy_state",
    "hotpatching",
    "bevy_asset",
    "bevy_gltf",
    "bevy_scene",
    "bevy_picking",
    "bevy_ui_picking_backend",
    "bevy_mesh_picking_backend",
    "bevy_text",
    "animation",
    "png",
    "ktx2",
    # < DELETE after 0.18
    # specific plugins
    "jpeg",
    "bevy_ui",
    "bevy_ui_render",
    "experimental_bevy_ui_widgets",
    "reflect_auto_register",
    "serialize",
    "hotpatching",
    "bevy_gilrs",
    # TODO: play with these features
    # "pbr_light_textures"
]

[dependencies]
wasm-fantasia-shared = { path = "../shared" }

# plugins
bevy_fix_cursor_unlock_web = "^0.2.0-rc"
bevy-inspector-egui = { version = "^0.35", optional = true }
bevy_skein = "^0.4"                                                                         # blender integration
# iyes_perf_ui = "0.5"                                                                      # diagnostics overlay

avian3d = { version = "^0.4", features = ["debug-plugin", "3d", "parallel", "collider-from-mesh"] }   # physics
bevy_seedling = { version = "^0.6", features = ["hrtf", "ogg", "web_audio"], optional = true }  # audio plugin using firewheel
bevy_shuffle_bag = { version = "^0.3", optional = true }                                    # random container for audio
firewheel = { version = "^0.9", optional = true }


bevy_third_person_camera = { version = "^0.3", optional = true }                            # 3rd person camera
bevy_hanabi = { version = "0.17", default-features = false, features = ["3d"], optional = true }  # GPU particles
spacetimedb-sdk = { path = "../crates/spacetimedb-sdk", optional = true }
web-time = "1.1"

# characrter control
bevy-tnua = "^0.26"                                                                         # floating character control
bevy-tnua-avian3d = "^0.8"                                                                  # tnua-avian interaction
bevy_enhanced_input = { version = "^0.20", features = ["serialize"] }                       # keyboard/gamepad input

# dialogue
bevy_yarnspinner = "^0.6.0-rc"
bevy_yarnspinner_example_dialogue_view = "^0.6.0-rc"

# misc
# itertools = "0.14.0"
image = "^0.25.6"
ron = "^0.10"
rand = "^0.9"
serde = "1"
thiserror = "2"
smol_str = { version = "0.3", default-features = false }
# keep the following in sync with Bevy's dependencies
winit = { version = "^0.30", default-features = false }
# Compile low-severity logs out of builds for performance.
# Remove these features if you want to profile your game with tracy.
# (see <https://github.com/bevyengine/bevy/blob/main/docs/profiling.md#tracy-profiler>)
tracing = { version = "^0.1", features = ["max_level_debug", "release_max_level_warn"] }
easy-ext = "1.0.2"

[target.wasm32-unknown-unknown.dependencies]
firewheel-web-audio = { git = "https://github.com/CorvusPrudens/firewheel-web-audio", rev = "ad810af" }
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2.108"
web-sys = { version = "0.3", features = ["Window", "Location"] }
spacetimedb-sdk = { path = "../crates/spacetimedb-sdk", features = ["web"] }

[build-dependencies]
serde_json = "1"

[lints]
workspace = true

[package.metadata.bevy_cli.release] # Disable dev features for release builds.
default-features = false
[package.metadata.bevy_cli.web]     # Disable native features for web builds.
default-features = false
[package.metadata.bevy_cli.web.dev]
features = ["dev"]
