[package]
name = "wasm_fantasia"
edition = "2024"
version = "0.1.5"
authors = ["Oleks Pickle <22867443+olekspickle@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
exclude = ["assets"]
repository = "https://github.com/olekspickle/wasm_fantasia"
description = "Simple but comprehensive 3D RPG game template with gamepad support"
keywords = ["bevy", "game", "template", "devkit", "third person", "topdown", "gamedev"]

[features]
default = [
    "dev",
    "bevy/dynamic_linking",         # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/embedded_watcher",        # Enable embedded asset hot reloading for dev builds.
    "bevy/file_watcher",            # Enable asset hot reloading for dev builds.
]
web = ["bevy/webgpu"]
dev = [
    "bevy-inspector-egui",
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    "bevy/track_location",          # Improve error messages coming from Bevy
]

[dependencies.bevy]
version = "^0.18"
default-features = false
# opinionated list without bevy_audio
features = [
    "default_app",
    "default_platform",
    "3d_api",
    "3d_bevy_render",
    "ui",
    "scene",
    "picking",
    "gltf_animation",
    # specific plugins
    "jpeg",
    "experimental_bevy_ui_widgets",
    "serialize",
    "hotpatching",
    "bevy_gilrs",
    "meshlet",
    "pbr_specular_textures",
]

[dependencies]
wasm-fantasia-shared = { path = "../shared" }

# plugins
bevy_fix_cursor_unlock_web = "^0.3"
bevy-inspector-egui = { version = "^0.36", optional = true }
bevy_skein = "^0.5"                                                                         # blender integration
# iyes_perf_ui = "0.5"                                                                      # diagnostics overlay

avian3d = { version = "^0.5", features = ["debug-plugin", "3d", "parallel", "collider-from-mesh"] }   # physics
bevy_seedling = { version = "^0.7", features = ["hrtf", "ogg", "web_audio"] }                # audio plugin using firewheel
bevy_shuffle_bag = "^0.4"                                                                   # random container for audio
firewheel = "^0.10"


bevy_third_person_camera = "^0.4"                                                           # 3rd person camera
spacetimedb-sdk = { path = "../crates/spacetimedb-sdk" }
web-time = "1.1"

# character control
bevy-tnua = "^0.30"                                                                         # floating character control
bevy-tnua-avian3d = "^0.10"                                                                 # tnua-avian interaction
bevy_enhanced_input = { version = "^0.23", features = ["serialize"] }                       # keyboard/gamepad input

# dialogue
bevy_yarnspinner = "^0.7"
bevy_yarnspinner_example_dialogue_view = "^0.7"

# misc
# itertools = "0.14.0"
image = "^0.25.6"
ron = "^0.10"
rand = "^0.9"
serde = "1"
thiserror = "2"
smol_str = { version = "0.3", default-features = false }
# keep the following in sync with Bevy's dependencies
winit = { version = "^0.30", default-features = false }
# Compile low-severity logs out of builds for performance.
# Remove these features if you want to profile your game with tracy.
# (see <https://github.com/bevyengine/bevy/blob/main/docs/profiling.md#tracy-profiler>)
tracing = { version = "^0.1", features = ["max_level_debug", "release_max_level_warn"] }
easy-ext = "1.0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
home = "0.5"

[target.wasm32-unknown-unknown.dependencies]
firewheel-web-audio = { git = "https://github.com/CorvusPrudens/firewheel-web-audio", rev = "ad810af" }
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2.108"
web-sys = { version = "0.3", features = ["Window", "Location"] }
spacetimedb-sdk = { path = "../crates/spacetimedb-sdk", features = ["web"] }

[build-dependencies]
serde_json = "1"

[package.metadata.cargo-machete]
ignored = ["tracing", "winit", "firewheel", "smol_str", "bevy_yarnspinner", "bevy_yarnspinner_example_dialogue_view"]

[lints]
workspace = true

[package.metadata.bevy_cli.release] # Disable dev features for release builds.
default-features = false
[package.metadata.bevy_cli.web]     # Disable native features for web builds.
default-features = false
[package.metadata.bevy_cli.web.dev]
features = ["dev"]
