[package]
name = "wasm_fantasia_module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "=1.12.0"
wasm-fantasia-shared = { path = "../shared" }
glam = { workspace = true }
avian3d = { path = "../crates/avian/crates/avian3d", default-features = false, features = ["3d", "f32", "parry-f32", "enhanced-determinism"] }

[lints]
workspace = true
