[package]
name = "bevy-tnua-avian3d"
description = "Avian 3D integration for bevy-tnua"
version = "0.10.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "^0.18", default-features = false }
avian3d = { package = "bevy_avian3d", path = "../avian/crates/bevy_avian3d", default-features = false, features = ["3d", "debug-plugin", "parallel"] }
bevy-tnua-physics-integration-layer = "^0.12"

[features]
default = ["avian3d/parry-f32"]
f64 = ["avian3d/parry-f64", "bevy-tnua-physics-integration-layer/f64"]
